force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <description>This will originally contain ERT WTR registrations, but could be expanded to other types of involvement. This is in line with Cru Schema for long term consolidation</description>
    <label>Registration</label>
    <nameField>
        <label>Involvement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>