force-app/main/default/objects/Registration__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <length>25</length>
    <type>Text</type>
</CustomField>