force-app/main/default/objects/Registration__c/fields/Attended_WTR__c.field-meta.xml
<CustomField>
    <fullName>Attended_WTR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended WTR</label>
    <type>Checkbox</type>
</CustomField>