force-app/main/default/objects/Registration__c/fields/Auto__c.field-meta.xml
<CustomField>
    <fullName>Auto__c</fullName>
    <displayFormat>I{00000}</displayFormat>
    <label>Auto</label>
    <type>AutoNumber</type>
</CustomField>