force-app/main/default/objects/Registration__c/fields/BQ_Updated__c.field-meta.xml
<CustomField>
    <fullName>BQ_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BQ Updated</label>
    <type>Checkbox</type>
</CustomField>