force-app/main/default/objects/Registration__c/fields/Can_Quote__c.field-meta.xml
<CustomField>
    <fullName>Can_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Quote</label>
    <type>Checkbox</type>
</CustomField>