force-app/main/default/objects/Registration__c/fields/Church_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Church_Attendance__c</fullName>
    <label>Church Attendance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>