force-app/main/default/objects/Registration__c/fields/Church_State__c.field-meta.xml
<CustomField>
    <fullName>Church_State__c</fullName>
    <label>Church State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>