force-app/main/default/objects/Registration__c/fields/Contact_GC__c.field-meta.xml
<CustomField>
    <fullName>Contact_GC__c</fullName>
    <formula>Contact__r.Group_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact GC</label>
    <type>Text</type>
</CustomField>