force-app/main/default/objects/Registration__c/fields/Contact_Phone_End__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_End__c</fullName>
    <formula>Last_Four__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone End</label>
    <type>Text</type>
</CustomField>