force-app/main/default/objects/Registration__c/fields/Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Street</label>
    <type>Text</type>
</CustomField>