force-app/main/default/objects/Registration__c/fields/Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip__c</fullName>
    <formula>Left(Contact__r.MailingPostalCode,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Zip</label>
    <type>Text</type>
</CustomField>