force-app/main/default/objects/Registration__c/fields/ERT_Updated__c.field-meta.xml
<CustomField>
    <fullName>ERT_Updated__c</fullName>
    <description>ERT</description>
    <label>ERT Updated</label>
    <type>Date</type>
</CustomField>