force-app/main/default/objects/Registration__c/fields/Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Detail</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>