force-app/main/default/objects/Registration__c/fields/Event_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Event_Improvement__c</fullName>
    <label>Event Improvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>