force-app/main/default/objects/Registration__c/fields/Event_Rating__c.field-meta.xml
<CustomField>
    <fullName>Event_Rating__c</fullName>
    <label>Event Rating</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>