force-app/main/default/objects/Registration__c/fields/External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Id__c</fullName>
    <label>External Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>