force-app/main/default/objects/Registration__c/fields/FL_Involvement__c.field-meta.xml
<CustomField>
    <fullName>FL_Involvement__c</fullName>
    <label>FL Involvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>