force-app/main/default/objects/Registration__c/fields/Flow_Choice__c.field-meta.xml
<CustomField>
    <fullName>Flow_Choice__c</fullName>
    <formula>First_Name__c &amp;&quot; &quot; &amp;  Left(Last_Name__c, 1) &amp;&quot; &quot; &amp; Left( Street__c , 30) &amp;&quot; Phone Ends With &quot; &amp;  Last_Four__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Choice</label>
    <type>Text</type>
</CustomField>