force-app/main/default/objects/Registration__c/fields/GC_Associated_Product__c.field-meta.xml
<CustomField>
    <fullName>GC_Associated_Product__c</fullName>
    <label>GC Associated Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>