force-app/main/default/objects/Registration__c/fields/GC_Certificate__c.field-meta.xml
<CustomField>
    <fullName>GC_Certificate__c</fullName>
    <label>GC Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>