force-app/main/default/objects/Registration__c/fields/GC_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GC_GL_Code__c</fullName>
    <label>GC GL Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>