force-app/main/default/objects/Registration__c/fields/GC_Value__c.field-meta.xml
<CustomField>
    <fullName>GC_Value__c</fullName>
    <label>GC Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>