force-app/main/default/objects/Registration__c/fields/Group_Registration__c.field-meta.xml
<CustomField>
    <fullName>Group_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Registration</label>
    <referenceTo>Ministry_Group_Registration__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>