force-app/main/default/objects/Registration__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations (Household)</relationshipLabel>
    <relationshipName>Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>