force-app/main/default/objects/Registration__c/fields/Household_Event_Area__c.field-meta.xml
<CustomField>
    <fullName>Household_Event_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household Event Area</label>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipLabel>Registrations (Household Event Area)</relationshipLabel>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>