force-app/main/default/objects/Registration__c/fields/Individual_Price__c.field-meta.xml
<CustomField>
    <fullName>Individual_Price__c</fullName>
    <formula>Paid_Amount__c / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>