force-app/main/default/objects/Registration__c/fields/Invite_Others__c.field-meta.xml
<CustomField>
    <fullName>Invite_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Others</label>
    <type>Checkbox</type>
</CustomField>