force-app/main/default/objects/Registration__c/fields/Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Event__c</fullName>
    <formula>Contact__r.WTR_Last__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Event</label>
    <type>Date</type>
</CustomField>