force-app/main/default/objects/Registration__c/fields/Local_Interest__c.field-meta.xml
<CustomField>
    <fullName>Local_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Interest</label>
    <type>Checkbox</type>
</CustomField>