force-app/main/default/objects/Registration__c/fields/Marriage_Impact__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Impact__c</fullName>
    <label>Marriage Impact</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>