force-app/main/default/objects/Registration__c/fields/Military__c.field-meta.xml
<CustomField>
    <fullName>Military__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Military</label>
    <type>Checkbox</type>
</CustomField>