force-app/main/default/objects/Registration__c/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <label>Military Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>