force-app/main/default/objects/Registration__c/fields/Ministry_Group__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Group</label>
    <referenceTo>Ministry_Group__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>