force-app/main/default/objects/Registration__c/fields/Pastor__c.field-meta.xml
<CustomField>
    <fullName>Pastor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pastor</label>
    <type>Checkbox</type>
</CustomField>