force-app/main/default/objects/Registration__c/fields/Pastor_Church__c.field-meta.xml
<CustomField>
    <fullName>Pastor_Church__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pastor Church</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations (Pastor Church)</relationshipLabel>
    <relationshipName>Registration</relationshipName>
    <type>Lookup</type>
</CustomField>