force-app/main/default/objects/Registration__c/fields/Primary_Registration__c.field-meta.xml
<CustomField>
    <fullName>Primary_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Registrations (Primary Registration)</relationshipLabel>
    <relationshipName>Registrations_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>