force-app/main/default/objects/Registration__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>ERT</description>
    <label>Promo Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>