force-app/main/default/objects/Registration__c/fields/Recommend_Rating__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Rating__c</fullName>
    <label>Recommend Rating</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>