force-app/main/default/objects/Registration__c/fields/Recommitted_Life_to_Christ__c.field-meta.xml
<CustomField>
    <fullName>Recommitted_Life_to_Christ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommitted Life to Christ</label>
    <type>Checkbox</type>
</CustomField>