force-app/main/default/objects/Registration__c/fields/Referral_Method__c.field-meta.xml
<CustomField>
    <fullName>Referral_Method__c</fullName>
    <label>Referral Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>