force-app/main/default/objects/Registration__c/fields/Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date__c</fullName>
    <description>ERT</description>
    <label>Registered Date</label>
    <type>Date</type>
</CustomField>