force-app/main/default/objects/Registration__c/fields/Registrant_Type__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Type__c</fullName>
    <description>Registrant Type</description>
    <label>Registrant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Couple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>