force-app/main/default/objects/Registration__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - Confirmed</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>A - Attended</fullName>
                <label>Attended</label>
            </value>
            <value>
                <fullName>N - NoShow</fullName>
                <label>Did Not Attend</label>
            </value>
            <value>
                <fullName>X - Cancelled</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Event Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>