force-app/main/default/objects/Registration__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <description>Registration_Type</description>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendee</fullName>
            </value>
            <value>
                <fullName>Pastor</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>