force-app/main/default/objects/Registration__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <formula>IF(Salvation_Decision__c = TRUE, &quot;Salvation &quot;,&quot;&quot;) 
&amp;
IF(Recommitted_Life_to_Christ__c  = TRUE, &quot;Recommitted &quot;, &quot;&quot;)
&amp;
IF(Invite_Others__c = TRUE, &quot;Invite Others &quot;, &quot;&quot;)
&amp;
IF(Lead_Small_Group__c = TRUE, &quot;Small Group &quot;, &quot;&quot;)
&amp;
IF( Local_Interest__c   = TRUE, &quot;Local&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response</label>
    <type>Text</type>
</CustomField>