force-app/main/default/objects/Registration__c/fields/Salvation_Decision__c.field-meta.xml
<CustomField>
    <fullName>Salvation_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salvation Decision</label>
    <type>Checkbox</type>
</CustomField>