force-app/main/default/objects/Registration__c/fields/SF_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Id__c</fullName>
    <formula>CASESAFEID( Household__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Account Id</label>
    <type>Text</type>
</CustomField>