force-app/main/default/objects/Registration__c/fields/SF_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Contact_Id__c</fullName>
    <formula>CASESAFEID(Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Contact Id</label>
    <type>Text</type>
</CustomField>