force-app/main/default/objects/Registration__c/fields/Share_Id__c.field-meta.xml
<CustomField>
    <fullName>Share_Id__c</fullName>
    <label>Share Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>