force-app/main/default/objects/Registration__c/fields/Speaker_Feeback__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Feeback__c</fullName>
    <label>Speaker Feeback</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>