force-app/main/default/objects/Registration__c/fields/Speaker_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Improvement__c</fullName>
    <label>Speaker Improvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>