force-app/main/default/objects/Registration__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Registration__c.Registrant_Type__c</field>
            <operation>equals</operation>
            <value>Spouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Registration (Spouse)</relationshipLabel>
    <relationshipName>Registration_Spouse</relationshipName>
    <type>Lookup</type>
</CustomField>