force-app/main/default/objects/Registration__c/fields/Staging_ID__c.field-meta.xml
<CustomField>
    <fullName>Staging_ID__c</fullName>
    <label>Staging ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>