force-app/main/default/objects/Registration__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <formula>Left(Contact__r.MobilePhone,4)&amp; Auto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token</label>
    <type>Text</type>
</CustomField>