force-app/main/default/objects/Registration__c/fields/Waiver__c.field-meta.xml
<CustomField>
    <fullName>Waiver__c</fullName>
    <description>Waiver</description>
    <label>Waiver</label>
    <length>50</length>
    <type>Text</type>
</CustomField>