force-app/main/default/objects/Registration__c/fields/Wedding_Date__c.field-meta.xml
<CustomField>
    <fullName>Wedding_Date__c</fullName>
    <label>Wedding Date</label>
    <type>Date</type>
</CustomField>