force-app/main/default/objects/Registration__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Registrant_Type__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>ALL</label>
</ListView>